# Markdown-Monkey

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES_v0.3.0.md  demo-features.en.md  demo-features.md  eslint.config.js  package.json  pnpm-lock.yaml  stats.html  vite.config.ts  vitest.config.ts
.cursor/rules/: release-rules.mdc
.github/workflows/: ci.yml  release.yml
docs/: AI_TUTORIAL.en-US.md  AI_TUTORIAL.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  FAQ.en-US.md  FAQ.md  FAQ.zh-CN.md  PROJECT_SUMMARY.md  TEST_COVERAGE.md  USER_MANUAL.en-US.md  USER_MANUAL.md  USER_MANUAL.zh-CN.md
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src/components/: AiChatModal.tsx  AiResultModal.tsx  CommandPalette.tsx  ContextMenu.tsx  ImageManager.tsx  KeyboardShortcuts.tsx  OutlineModal.tsx  PreviewArea.tsx  PromptModal.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TableEditor.tsx  Toolbar.tsx  ai_chat_modal.tsx  ai_result_modal.tsx  ai_settings_modal.tsx  command_palette.tsx  context_menu.tsx  editor_settings_modal.tsx  outline_modal.tsx  prompt_modal.tsx  settings_modal.tsx
src/config/: constants.ts
src/contexts/: AIContext.tsx  EditorContext.tsx  UIContext.tsx
src/hooks/: index.ts  useAI.ts  useAIState.ts  useDocumentState.ts  useEditorState.ts  useFileManager.ts  useImageManager.ts  useMemoryLimit.ts  (+6 more)
(+18 files in other folders)
